added deal widget;

--- a/0ac18245-f2cf-48ad-be8a-ca65a3e7a411/index.html
+++ b/0ac18245-f2cf-48ad-be8a-ca65a3e7a411/index.html
@@ -11,7 +11,7 @@
   <!-- Strossle SDK -->
   <script>
     window.strossle=window.strossle||function(){(strossle.q=strossle.q||[]).push(arguments)};
-    strossle('987947a3-63e6-4947-b1a5-b48047787fd8', '.strossle-widget');
+    strossle('0ac18245-f2cf-48ad-be8a-ca65a3e7a411', '.strossle-widget');
   </script>
   <script async src="https://assets.strossle.com/strossle-widget-sdk/1/strossle-widget-sdk.js"></script>
   <!-- End Strossle SDK -->
@@ -20,8 +20,8 @@
 <body class="strossle">
   <main>
     <a href="/">Home</a>
-    <h1 class="body-main-title">Welcome to <span class="accent">Show Me Ad UNO</span> test pages</h1>
-    <h3><a href="https://factory.strossle.com/widgets/987947a3-63e6-4947-b1a5-b48047787fd8/details" target="_blank" rel="noopener noreferrer">Factory - 987947a3-63e6-4947-b1a5-b48047787fd8</a></h3>
+    <h1 class="body-main-title">Welcome to <span class="accent">Show Me Ad DUE</span> test pages</h1>
+    <h3><a href="https://factory.strossle.com/widgets/0ac18245-f2cf-48ad-be8a-ca65a3e7a411" target="_blank" rel="noopener noreferrer">Factory - 0ac18245-f2cf-48ad-be8a-ca65a3e7a411</a></h3>
     <div class="test-case">
       <div class="strossle-widget"></div>
     </div>
