--- a/index.html
+++ b/index.html
@@ -10,17 +10,11 @@
   <h1 class="body-main-title">Welcome to <span class="accent">Strossle Widget</span> test pages</h1>
   <div>
     <ul>
-<!--      <li>-->
-<!--        <a href="https://strossle.sikmozku.com/ebc7cde5-0412-4cca-8b8a-0fc59c83c1cb" target="_blank" rel="noopener noreferrer"><span>ebc7cde5-0412-4cca-8b8a-0fc59c83c1cb</span> - Bonnier case</a>-->
-<!--      </li>-->
-<!--      <li>-->
-<!--        <a href="https://strossle.sikmozku.com/63zc1ik8020zJYpNaAP4-383423304" target="_blank" rel="noopener noreferrer"><span>63zc1ik8020zJYpNaAP4-383423304</span> - Bonnier Newsletter example</a>-->
-<!--      </li>-->
-<!--      <li>-->
-<!--        <a href="https://strossle.sikmozku.com/4f3294d6-c683-4d6e-9ab6-b64ab9ee2d8e" target="_blank" rel="noopener noreferrer"><span>63zc1ik8020zJYpNaAP4-383423304</span> - onContentClick test page</a>-->
-<!--      </li>-->
       <li>
-        <a href="https://strossle.showmead.xyz/987947a3-63e6-4947-b1a5-b48047787fd8" target="_blank" rel="noopener noreferrer"><span>987947a3-63e6-4947-b1a5-b48047787fd8</span> - Sik Mozku Uno</a>
+        <a href="https://strossle.showmead.xyz/987947a3-63e6-4947-b1a5-b48047787fd8" target="_blank" rel="noopener noreferrer"><span>987947a3-63e6-4947-b1a5-b48047787fd8</span> - Show Me Ad UNO</a>
+      </li>
+      <li>
+        <a href="https://strossle.showmead.xyz/0ac18245-f2cf-48ad-be8a-ca65a3e7a411" target="_blank" rel="noopener noreferrer"><span>0ac18245-f2cf-48ad-be8a-ca65a3e7a411</span> - Show Me Ad DUE</a>
       </li>
     </ul>
   </div>
