updated titles and home link;

--- a/0ac18245-f2cf-48ad-be8a-ca65a3e7a411/index.html
+++ b/0ac18245-f2cf-48ad-be8a-ca65a3e7a411/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Sik Mozku Uno</title>
+  <title>SMA XYZ Uno</title>
 
   <link rel="stylesheet" href="./styles/style.css">
 
@@ -19,7 +19,7 @@
 </head>
 <body class="strossle">
   <main>
-    <a href="/">Home</a>
+    <a href="https://strossle.showmead.xyz">Home</a>
     <h1 class="body-main-title">Welcome to <span class="accent">Show Me Ad DUE</span> test pages</h1>
     <h3><a href="https://factory.strossle.com/widgets/0ac18245-f2cf-48ad-be8a-ca65a3e7a411" target="_blank" rel="noopener noreferrer">Factory - 0ac18245-f2cf-48ad-be8a-ca65a3e7a411</a></h3>
     <div class="test-case">
