--- a/987947a3-63e6-4947-b1a5-b48047787fd8/index.html
+++ b/987947a3-63e6-4947-b1a5-b48047787fd8/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Sik Mozku Uno</title>
+  <title>SMA XYZ Uno</title>
 
   <link rel="stylesheet" href="./styles/style.css">
 
@@ -19,7 +19,7 @@
 </head>
 <body class="strossle">
   <main>
-    <a href="/">Home</a>
+    <a href="https://strossle.showmead.xyz">Home</a>
     <h1 class="body-main-title">Welcome to <span class="accent">Show Me Ad UNO</span> test pages</h1>
     <h3><a href="https://factory.strossle.com/widgets/987947a3-63e6-4947-b1a5-b48047787fd8/details" target="_blank" rel="noopener noreferrer">Factory - 987947a3-63e6-4947-b1a5-b48047787fd8</a></h3>
     <div class="test-case">
