added idenyt nesletter test;

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <li>
         <a href="https://strossle.showmead.xyz/0ac18245-f2cf-48ad-be8a-ca65a3e7a411" target="_blank" rel="noopener noreferrer"><span>0ac18245-f2cf-48ad-be8a-ca65a3e7a411</span> - Show Me Ad DUE</a>
       </li>
+      <li>
+        <a href="https://strossle.showmead.xyz/fe6ece3a-ca56-470c-a793-e77ce9f945d9" target="_blank" rel="noopener noreferrer"><span>fe6ece3a-ca56-470c-a793-e77ce9f945d9</span> - Idenyt Newsletter</a>
+      </li>
     </ul>
   </div>
 </main>
