--- a/index.html
+++ b/index.html
@@ -2,28 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="color-scheme" content="light dark" />
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+  />
+<!--  <link rel="stylesheet" href="styles/style.css">-->
+
   <title>SMA XYZ</title>
-  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-<main style="text-align: center;">
-  <h1 class="body-main-title">Welcome to <span class="accent">Strossle Widget</span> test pages</h1>
-  <div>
-    <ul>
-      <li>
-        <a href="https://strossle.showmead.xyz/987947a3-63e6-4947-b1a5-b48047787fd8" target="_blank" rel="noopener noreferrer"><span>987947a3-63e6-4947-b1a5-b48047787fd8</span> - Show Me Ad UNO</a>
-      </li>
-      <li>
-        <a href="https://strossle.showmead.xyz/0ac18245-f2cf-48ad-be8a-ca65a3e7a411" target="_blank" rel="noopener noreferrer"><span>0ac18245-f2cf-48ad-be8a-ca65a3e7a411</span> - Show Me Ad DUE</a>
-      </li>
-      <li>
-        <a href="https://strossle.showmead.xyz/fe6ece3a-ca56-470c-a793-e77ce9f945d9" target="_blank" rel="noopener noreferrer"><span>fe6ece3a-ca56-470c-a793-e77ce9f945d9</span> - Idenyt Newsletter</a>
-      </li>
-    </ul>
-  </div>
+  <header class="container">
+    <hgroup>
+      <h1>Welcome to <span class="accent">Strossle Widget</span> test pages</h1>
+      <p>Simple index of the Strossle test pages</P>
+    </hgroup>
+  </header>
+  <main class="container">
+    <section id="pages">
+      <h3>Test Pages</h3>
+      <ul>
+        <li>
+          <a href="https://strossle.showmead.xyz/987947a3-63e6-4947-b1a5-b48047787fd8" target="_blank" rel="noopener noreferrer"><span>987947a3-63e6-4947-b1a5-b48047787fd8</span> - Show Me Ad UNO</a>
+        </li>
+        <li>
+          <a href="https://strossle.showmead.xyz/0ac18245-f2cf-48ad-be8a-ca65a3e7a411" target="_blank" rel="noopener noreferrer"><span>0ac18245-f2cf-48ad-be8a-ca65a3e7a411</span> - Show Me Ad DUE</a>
+        </li>
+        <li>
+          <a href="https://strossle.showmead.xyz/fe6ece3a-ca56-470c-a793-e77ce9f945d9" target="_blank" rel="noopener noreferrer"><span>fe6ece3a-ca56-470c-a793-e77ce9f945d9</span> - Idenyt Newsletter</a>
+        </li>
+      </ul>
+    </section>
 </main>
-<footer>
-  © 2024, Show Me Ad XYZ
-</footer>
+  <footer class="container">
+    © 2024, Show Me Ad XYZ
+  </footer>
 </body>
 </html>
