--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header class="container">
     <hgroup>
-      <h1>Welcome to <span class="accent">Strossle Widget</span> test pages</h1>
+      <h1>Welcome to <kbd>Strossle Widget</kbd> test pages</h1>
       <p>Simple index of the Strossle test pages</P>
     </hgroup>
   </header>
@@ -36,7 +36,7 @@
     </section>
 </main>
   <footer class="container">
-    © 2024, Show Me Ad XYZ
+    <small>© 2024, Show Me Ad XYZ</small>
   </footer>
 </body>
 </html>
