applied picocss for Show Me Ad DUE test page;

--- a/987947a3-63e6-4947-b1a5-b48047787fd8/index.html
+++ b/987947a3-63e6-4947-b1a5-b48047787fd8/index.html
@@ -11,8 +11,6 @@
 
   <title>SMA XYZ Uno</title>
 
-<!--  <link rel="stylesheet" href="./styles/style.css">-->
-
   <!-- Strossle SDK -->
   <script>
     window.strossle=window.strossle||function(){(strossle.q=strossle.q||[]).push(arguments)};
@@ -32,14 +30,13 @@
             <a href="https://strossle.showmead.xyz">Home</a>
           </li>
           <li>
-            <a href="https://factory.strossle.com/widgets/987947a3-63e6-4947-b1a5-b48047787fd8/details" target="_blank" rel="noopener noreferrer">Factory - 987947a3-63e6-4947-b1a5-b48047787fd8</a>
+            <a href="https://factory.strossle.com/widgets/987947a3-63e6-4947-b1a5-b48047787fd8/details" target="_blank" rel="noopener noreferrer">Factory</a>
           </li>
         </ul>
       </nav>
     </hgroup>
   </header>
   <main class="container">
-<!--    <a href="https://strossle.showmead.xyz">Home</a>-->
     <article id="test-case">
       <h3>Test Case</h3>
       <p>
