--- a/fe6ece3a-ca56-470c-a793-e77ce9f945d9/index.html
+++ b/fe6ece3a-ca56-470c-a793-e77ce9f945d9/index.html
@@ -3,32 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="color-scheme" content="light dark" />
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+  />
 
-  <title>${widget_id}</title>
+  <title>fe6ece3a-ca56-470c-a793-e77ce9f945d9</title>
 
-  <link rel="stylesheet" href="./styles/style.css">
+<!--  <link rel="stylesheet" href="./styles/style.css">-->
 </head>
-<body class="strossle">
-<main>
-  <h1 class="body-main-title">Welcome to <span class="accent">Idenyt</span> test pages</h1>
-  <div class="test-case">
-    <div class="newsletter">
-      <h2>Newsletter</h2><br/>
-      <!--<div class="integration">
-        <a href="https://imgad.strossle.com/click?pid=fe6ece3a-ca56-470c-a793-e77ce9f945d9">
-          <img src="https://imgad.strossle.com/img?pid=fe6ece3a-ca56-470c-a793-e77ce9f945d9" alt="fe6ece3a-ca56-470c-a793-e77ce9f945d9"/>
-        </a>
-      </div>-->
-      <div class="integration">
-        <a href="https://imgad.strossle.com/click?uid=[UID]&nid=[NID]&slot=[SLOT]&pid=fe6ece3a-ca56-470c-a793-e77ce9f945d9">
-          <img src="https://imgad.strossle.com/img?uid=[UID]&nid=[NID]&slot=[SLOT]&pid=fe6ece3a-ca56-470c-a793-e77ce9f945d9" alt="" width="[WIDTH]" />
-        </a>
-      </div>
-    </div>
-  </div>
+<body>
+<header class="container">
+  <hgroup>
+    <h1>Welcome to <kbd>Idenyt Newsletter</kbd> test page</h1>
+    <nav>
+      <ul>
+        <li>
+          <a href="https://strossle.showmead.xyz">Home</a>
+        </li>
+        <li>
+          <a href="https://factory.strossle.com/widgets/fe6ece3a-ca56-470c-a793-e77ce9f945d9/details" target="_blank" rel="noopener noreferrer">Factory</a>
+        </li>
+      </ul>
+    </nav>
+  </hgroup>
+</header>
+<main class="container">
+  <article id="test-case">
+    <h3>Test Case - Newsletter</h3>
+    <figure>
+      <a href="https://imgad.strossle.com/click?uid=[UID]&nid=[NID]&slot=[SLOT]&pid=fe6ece3a-ca56-470c-a793-e77ce9f945d9">
+        <img src="https://imgad.strossle.com/img?uid=[UID]&nid=[NID]&slot=[SLOT]&pid=fe6ece3a-ca56-470c-a793-e77ce9f945d9" alt="" width="[WIDTH]" />
+      </a>
+    </figure>
+    <footer>
+      fe6ece3a-ca56-470c-a793-e77ce9f945d9
+    </footer>
+  </article>
 </main>
-<footer>
-  © 2024, Show Me Ad XYZ
+<footer class="container">
+  <small>© 2024, Show Me Ad XYZ</small>
 </footer>
 <!--<script src="app.js" type="application/javascript"></script>-->
 </body>
