amended index.html to table representation of list of test page;

--- a/index.html
+++ b/index.html
@@ -22,17 +22,38 @@
   <main class="container">
     <section id="pages">
       <h3>Test Pages</h3>
-      <ul>
-        <li>
-          <a href="https://strossle.showmead.xyz/987947a3-63e6-4947-b1a5-b48047787fd8" target="_blank" rel="noopener noreferrer"><span>987947a3-63e6-4947-b1a5-b48047787fd8</span> - Show Me Ad UNO</a>
-        </li>
-        <li>
-          <a href="https://strossle.showmead.xyz/0ac18245-f2cf-48ad-be8a-ca65a3e7a411" target="_blank" rel="noopener noreferrer"><span>0ac18245-f2cf-48ad-be8a-ca65a3e7a411</span> - Show Me Ad DUE</a>
-        </li>
-        <li>
-          <a href="https://strossle.showmead.xyz/fe6ece3a-ca56-470c-a793-e77ce9f945d9" target="_blank" rel="noopener noreferrer"><span>fe6ece3a-ca56-470c-a793-e77ce9f945d9</span> - Idenyt Newsletter</a>
-        </li>
-      </ul>
+      <table>
+        <thead data-theme="dark">
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Placement</th>
+            <th scope="col">Link</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><mark>Show Me Ad UNO</mark></td>
+            <td>987947a3-63e6-4947-b1a5-b48047787fd8</td>
+            <td>
+              <a href="https://strossle.showmead.xyz/987947a3-63e6-4947-b1a5-b48047787fd8" target="_blank" rel="noopener noreferrer">Page</a>
+            </td>
+          </tr>
+          <tr>
+            <td><mark>Show Me Ad DUE</mark></td>
+            <td>0ac18245-f2cf-48ad-be8a-ca65a3e7a411</td>
+            <td>
+              <a href="https://strossle.showmead.xyz/0ac18245-f2cf-48ad-be8a-ca65a3e7a411" target="_blank" rel="noopener noreferrer">Page</a>
+            </td>
+          </tr>
+          <tr>
+            <td><mark>Idenyt Newsletter</mark></td>
+            <td>fe6ece3a-ca56-470c-a793-e77ce9f945d9</td>
+            <td>
+              <a href="https://strossle.showmead.xyz/fe6ece3a-ca56-470c-a793-e77ce9f945d9" target="_blank" rel="noopener noreferrer">Page</a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </section>
 </main>
   <footer class="container">
