added test page for widget with enabled prebid server integration;

--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
               <a href="https://strossle.showmead.xyz/fe6ece3a-ca56-470c-a793-e77ce9f945d9" target="_blank" rel="noopener noreferrer">Page</a>
             </td>
           </tr>
+          <tr>
+            <td><mark>Target Motori (PBS)</mark></td>
+            <td>b7a233e9-0a42-4912-a5be-05991094f7a5</td>
+            <td>
+              <a href="https://strossle.showmead.xyz/b7a233e9-0a42-4912-a5be-05991094f7a5" target="_blank" rel="noopener noreferrer">Page</a>
+            </td>
+          </tr>
         </tbody>
       </table>
     </section>
