--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
               <a href="https://strossle.showmead.xyz/b7a233e9-0a42-4912-a5be-05991094f7a5" target="_blank" rel="noopener noreferrer">Page</a>
             </td>
           </tr>
+          <tr>
+            <td><mark>Vlyby Show Me Ad</mark></td>
+            <td>688c3c09-aef1-4e89-a346-ba63ff6f0428</td>
+            <td>
+              <a href="https://strossle.showmead.xyz/688c3c09-aef1-4e89-a346-ba63ff6f0428" target="_blank" rel="noopener noreferrer">Page</a>
+            </td>
+          </tr>
         </tbody>
       </table>
     </section>
