vlyby demo page

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
               <a href="https://strossle.showmead.xyz/b7a233e9-0a42-4912-a5be-05991094f7a5" target="_blank" rel="noopener noreferrer">Page</a>
             </td>
           </tr>
+          <tr>
+            <td><mark>VlyBy Demo page</mark></td>
+            <td>0ac18245-f2cf-48ad-be8a-ca65a3e7a411</td>
+            <td>
+              <a href="https://strossle.showmead.xyz/vlyby-demo-page" target="_blank" rel="noopener noreferrer">Page</a>
+            </td>
+          </tr>
         </tbody>
       </table>
     </section>
