Amended page with the Vlyby integration to look like an article;

--- a/688c3c09-aef1-4e89-a346-ba63ff6f0428/index.html
+++ b/688c3c09-aef1-4e89-a346-ba63ff6f0428/index.html
@@ -11,6 +11,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
   />
+  <link rel="stylesheet" href="styles/custom.css">
 
   <title>Vlyby Show Me Ad</title>
 
@@ -40,14 +41,58 @@
     </hgroup>
   </header>
   <main class="container">
-    <article id="test-case">
-      <h3>Test Case</h3>
+    <article id="blog-post">
+      <h3>Rethinking engagement with gamers in 2024</h3>
+      <figure>
+        <img src="./assets/gaming-Website-Banner-copie.png" />
+        <figcaption>
+          It’s time to retire the word “gamer.”
+        </figcaption>
+      </figure>
       <p>
-        <div class="strossle-widget"></div>
+        In July, the Entertainment Software Association (ESA) released its 2023 report, revealing that over 65% of Americans play video games – approximately 227 million weekly players. This surge has established video games as America’s favourite pastime. The gaming audience has diversified significantly; marketing intelligence platform eMarketer reports that in 2023 nearly half of Baby Boomers play video games, and projections indicate that individuals aged 65 and above will be the fastest-growing segment of players in the next five years. As the kids who used to play Nintendo have become adults with spending power, the term  “gamers” feel outdated, harking back to an era when gaming was niche rather than ubiquitous.
+      </p>
+      <figure>
+        <img src="./assets/Chart1_whitetext.png" />
+        <figcaption>
+          Source: <a href="https://www.emarketer.com/chart/256204/us-digital-gamers-by-device-2022-2026-millions">eMarketer, H1 2023</a>
+        </figcaption>
+      </figure>
+      <p>
+        Despite this explosion of interest, marketers still haven’t caught up: in the US video games rank third in how people spend their spare time, yet less than 5% of marketing budgets are spent on reaching people playing games. As mobile gaming has made games accessible to everyone, casual games have become the most popular genre, played by more people, more often and throughout the day. Surprisingly, data from Azerion’s audience platform suggests that only 30% of casual gamers express their interests online otherwise (i.e. through social media or consuming video or blog content), making it challenging to identify them unless marketers engage them within their gaming environments.
+      </p>
+      <figure>
+        <img src="./assets/chart2_whitetext.png" />
+        <figcaption>
+          Source: <a href="https://chart-na1.emarketer.com/256204/us-digital-gamers-by-device-2022-2026-millions">eMarketer, H1 2023</a>
+        </figcaption>
+      </figure>
+      <p>
+        Gaming is the ultimate “lean-in” activity for digital devices, requiring focus and active participation on the part of the player. As such, it’s an experience which should lend itself more readily to marketing, particularly as the industry has cleared the technical hurdles and we’ve become able to reach people playing games programmatically, in-app, and with ads which integrate seamlessly with the experience.
+      </p>
+      <p>
+        The key lies in capturing player attention. Attention studies conducted through Lumen for Azerion’s advertising partners indicate that in-game ads frequently outperform standard display and video, driving longer view times, higher ad recall, and often more than 2x the time actually spent paying attention to ads on a per-impression basis. These higher average view times and attention mean that in-game ads drive more consumers to engage with campaigns and respond favourably when it comes to brand metrics measured via survey. This makes in-game ads among the most effective ways to drive top-of-the funnel results, and often with only 1-2 exposures. The effects can be even more pronounced with rewarded video ads which engage with the player’s desire for more in-game currency or lives.
+      </p>
+      <figure>
+        <img src="./assets/Chart3_whitetext2.png" />
+        <figcaption>
+          Source: <em>Lumen attention study</em>
+        </figcaption>
+      </figure>
+      <p>
+        The term ‘gamer’ inhibits marketing creativity. Just as one wouldn’t target “the TV-watching audience” or “the moviegoing audience,” a segmented approach tailored to various gamer subsets is more effective. For instance, Moms who game with their kids on weekends, Boomers engaging in crossword puzzles on newspaper websites, or men aged 25-34 making in-game purchases on PlayStation 5 or Xbox Series X. Within the 227 million Americans playing games, numerous segments await explorations, necessitating partners who excel in targeted segmentation – demographic, behavioural, contextual, or genre-based – and adeptly navigate this diverse landscape.
+      </p>
+      <h4>About Azerion</h4>
+      <p>
+        Founded in 2014, Azerion (EURONEXT: AZRN) is one of Europe’s largest digital advertising and entertainment media platforms. Azerion brings global scaled audiences to advertisers in an easy and cost-effective way, delivered through their proprietary technology, in a safe, engaging, and high-quality environment, utilizing our strategic portfolio of owned and operated content with entertainment and other digital publishing partners.
+      </p>
+      <p>
+        Having its roots in Europe with its headquarters in Amsterdam, Azerion has commercial teams based in over 26 cities around the world to closely support our clients and partners to find and execute creative ways to really make an impact through advertising.
       </p>
       <footer>
-        688c3c09-aef1-4e89-a346-ba63ff6f0428
+        <small>For more information visit: <a href="https://www.azerion.com/">www.azerion.com</a>.</small>
       </footer>
+      <div class="strossle-widget"></div>
     </article>
   </main>
   <footer class="container">
