--- a/688c3c09-aef1-4e89-a346-ba63ff6f0428/index.html
+++ b/688c3c09-aef1-4e89-a346-ba63ff6f0428/index.html
@@ -11,7 +11,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
   />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/grids-responsive-min.css">
   <link rel="stylesheet" href="styles/custom.css">
 
   <title>Vlyby Show Me Ad</title>
@@ -43,8 +43,8 @@
   </header>
   <main class="container-fluid">
     <div class="pure-g">
-      <div class="pure-u-7-24"><p></p></div>
-      <div class="pure-u-10-24">
+      <div class="pure-u-1 pure-u-md-4-24 pure-u-lg-4-24 pure-u-xl-6-24 pure-u-xxl-7-24"><p></p></div>
+      <div class="pure-u-1 pure-u-md-16-24 pure-u-lg-16-24 pure-u-xl-12-24 pure-u-xxl-10-24">
         <figure>
           <img src="./assets/azerion-ag_pr-image_1420x730.jpg" />
         </figure>
@@ -69,7 +69,7 @@
           <p></p>
         </article>
       </div>
-      <div class="pure-u-7-24"><p></p></div>
+      <div class="pure-u-1 pure-u-md-4-24 pure-u-sm-1 pure-u-lg-4-24 pure-u-xl-6-24 pure-u-xxl-7-24"><p></p></div>
     </div>
 
   </main>
