--- a/688c3c09-aef1-4e89-a346-ba63ff6f0428/index.html
+++ b/688c3c09-aef1-4e89-a346-ba63ff6f0428/index.html
@@ -13,6 +13,7 @@
   />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/grids-responsive-min.css">
   <link rel="stylesheet" href="styles/custom.css">
+  <link rel="shortcut icon" href="./assets/favicon_strossle.png">
 
   <title>Vlyby Show Me Ad</title>
 
