--- a/fe6ece3a-ca56-470c-a793-e77ce9f945d9/index.html
+++ b/fe6ece3a-ca56-470c-a793-e77ce9f945d9/index.html
@@ -8,6 +8,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
   />
+  <link rel="shortcut icon" href="https://www.strossle.com/hubfs/favicon.png">
 
   <title>fe6ece3a-ca56-470c-a793-e77ce9f945d9</title>
 
