--- a/987947a3-63e6-4947-b1a5-b48047787fd8/index.html
+++ b/987947a3-63e6-4947-b1a5-b48047787fd8/index.html
@@ -11,6 +11,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
   />
+  <link rel="shortcut icon" href="https://www.strossle.com/hubfs/favicon.png">
 
   <title>SMA XYZ Uno</title>
 
