--- a/b7a233e9-0a42-4912-a5be-05991094f7a5/index.html
+++ b/b7a233e9-0a42-4912-a5be-05991094f7a5/index.html
@@ -8,6 +8,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
   />
+  <link rel="shortcut icon" href="https://www.strossle.com/hubfs/favicon.png">
   <title>Target Motori</title>
 
   <!-- Strossle SDK -->
