--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
   />
+  <link rel="shortcut icon" href="https://www.strossle.com/hubfs/favicon.png">
 <!--  <link rel="stylesheet" href="styles/style.css">-->
 
   <title>SMA XYZ</title>
