--- a/fe6ece3a-ca56-470c-a793-e77ce9f945d9/index.html
+++ b/fe6ece3a-ca56-470c-a793-e77ce9f945d9/index.html
@@ -8,6 +8,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
   />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/grids-responsive-min.css">
   <link rel="shortcut icon" href="https://www.strossle.com/hubfs/favicon.png">
 
   <title>fe6ece3a-ca56-470c-a793-e77ce9f945d9</title>
@@ -31,17 +32,23 @@
   </hgroup>
 </header>
 <main class="container">
-  <article id="test-case">
-    <h3>Test Case - Newsletter</h3>
-    <figure>
-      <a href="https://imgad.strossle.com/click?uid=[UID]&nid=[NID]&slot=[SLOT]&pid=fe6ece3a-ca56-470c-a793-e77ce9f945d9">
-        <img src="https://imgad.strossle.com/img?uid=[UID]&nid=[NID]&slot=[SLOT]&pid=fe6ece3a-ca56-470c-a793-e77ce9f945d9" alt="" width="[WIDTH]" />
-      </a>
-    </figure>
-    <footer>
-      fe6ece3a-ca56-470c-a793-e77ce9f945d9
-    </footer>
-  </article>
+  <div class="pure-g">
+    <div class="pure-u-1 pure-u-md-4-24 pure-u-lg-4-24 pure-u-xl-6-24 pure-u-xxl-7-24"><p></p></div>
+    <div class="pure-u-1 pure-u-md-16-24 pure-u-lg-16-24 pure-u-xl-12-24 pure-u-xxl-10-24">
+      <article id="test-case">
+        <h3>Test Case - Newsletter</h3>
+        <figure>
+          <a href="https://imgad.strossle.com/click?uid=13168184&nid=1405856&pid=fe6ece3a-ca56-470c-a793-e77ce9f945d9&slot=1">
+            <img src="https://imgad.strossle.com/img?uid=13168184&nid=1405856&pid=fe6ece3a-ca56-470c-a793-e77ce9f945d9&slot=1" alt="" width="620" />
+          </a>
+        </figure>
+        <footer>
+          fe6ece3a-ca56-470c-a793-e77ce9f945d9
+        </footer>
+      </article>
+    </div>
+    <div class="pure-u-1 pure-u-md-4-24 pure-u-lg-4-24 pure-u-xl-6-24 pure-u-xxl-7-24"><p></p></div>
+  </div>
 </main>
 <footer class="container">
   <small>© 2024, Show Me Ad XYZ</small>
