Added Show Me Newsletter Ad page;

--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
             </td>
           </tr>
           <tr>
+            <td><mark>Show Me Newsletter Ad</mark></td>
+            <td>c2062196-4bf6-40a4-a132-8b7a6d2d9503</td>
+            <td>
+              <a href="https://strossle.showmead.xyz/c2062196-4bf6-40a4-a132-8b7a6d2d9503" target="_blank" rel="noopener noreferrer">Page</a>
+            </td>
+          </tr>
+          <tr>
             <td><mark>Idenyt Newsletter</mark></td>
             <td>fe6ece3a-ca56-470c-a793-e77ce9f945d9</td>
             <td>
