Added new mapping record;

--- a/572632b3-7154-4189-9403-b3ce981ff2b6/index.html
+++ b/572632b3-7154-4189-9403-b3ce981ff2b6/index.html
@@ -24,7 +24,7 @@
       }]
     });
   </script>
-  <script async src="https://assets.strossle.com/strossle-widget-sdk/1/strossle-widget-sdk.js"></script>
+<!--  <script async src="https://assets.strossle.com/strossle-widget-sdk/1/strossle-widget-sdk.js"></script>-->
   <!-- End Strossle SDK -->
 
 </head>
@@ -63,9 +63,10 @@
       console.log('Strossle to MGID converter started');
 
       const mapping = {
-        '572632b3-7154-4189-9403-b3ce981ff2b6': {sId: 103889, wId: 1580250, token: 'e0ed0bbe78d75b77ee0283db96d59442'},
+        // '572632b3-7154-4189-9403-b3ce981ff2b6': {sId: 103889, wId: 1580250, token: 'e0ed0bbe78d75b77ee0283db96d59442'},
         'b3c3c5d7-0f56-49ab-bad6-24f137768f3b': {sId: 103889, wId: 374507, token: 'e9af59006d19259cfd7a9d30126700f3'},
         'a5ff637f-95d3-4bca-9ab0-dcaac6314436': {sId: 103889, wId: 372414, token: '2ad01f448a3a8fdd51ed845bd91c7698'},
+        '572632b3-7154-4189-9403-b3ce981ff2b6': {sId: 990163, wId: 1683408, token: 'e0ed0bbe78d75b77ee0283db96d59442'},
       };
 
       let queue = [];
