added publisher page

--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
               <a href="https://strossle.showmead.xyz/572632b3-7154-4189-9403-b3ce981ff2b6" target="_blank" rel="noopener noreferrer">Page</a>
             </td>
           </tr>
+          <tr>
+            <td><mark>Publisher Layout Page</mark></td>
+            <td>28b2e8bf-bf93-41dc-8ff0-9b9ca545a49b</td>
+            <td>
+              <a href="./publisher_test" target="_blank" rel="noopener noreferrer">Page</a>
+            </td>
+          </tr>
         </tbody>
       </table>
     </section>
