Added new page with mgid tag on it;

--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
               <a href="./publisher_test" target="_blank" rel="noopener noreferrer">Page</a>
             </td>
           </tr>
+          <tr>
+            <td><mark>Project Native - TEST_Widget_Arnaud_Jan25</mark></td>
+            <td>1732073</td>
+            <td>
+              <a href="./mgid" target="_blank" rel="noopener noreferrer">Page</a>
+            </td>
+          </tr>
         </tbody>
       </table>
     </section>
